Fix post_base title on mobile

--- a/assets/sass/pages/_post_base.scss
+++ b/assets/sass/pages/_post_base.scss
@@ -6,7 +6,7 @@
 
   &__main-title {
     margin: 2rem auto;
-    font-size: 48px;
+    font-size: 2rem;
     text-align: center;
   }
 
